feat: configured local setup for bff + micro remix frontends

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: push
 
 permissions:
   actions: read
@@ -12,7 +8,7 @@ permissions:
 
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
         with:
@@ -43,7 +39,11 @@ jobs:
       # - run: pnpm exec nx-cloud record -- echo Hello World
       # As your workspace grows, you can change this to use Nx Affected to run only tasks affected by the changes in this PR/commit. Learn more: https://nx.dev/ci/features/affected
       # When you enable task distribution, run the e2e-ci task instead of e2e
-      - run: pnpm exec nx run-many -t lint test build
+      - run: pnpm exec nx run-many -t lint test
+
+      - run: pnpm exec nx run -t build
+        # If you want to run the e2e tests, uncomment the following line
+        # - run: pnpm exec nx run-many -t e2e --parallel --maxParallel=3
       # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ci/features/self-healing-ci
       - run: pnpm exec nx fix-ci
         if: always()
