--- a/nx.json
+++ b/nx.json
@@ -72,7 +72,8 @@
       "plugin": "@nx/jest/plugin",
       "options": {
         "targetName": "test"
-      }
+      },
+      "exclude": ["apps/bff-e2e/**/*"]
     },
     {
       "plugin": "@nx/remix/plugin",
@@ -82,6 +83,16 @@
         "devTargetName": "dev",
         "typecheckTargetName": "typecheck",
         "serveStaticTargetName": "serve-static",
+        "buildDepsTargetName": "build-deps",
+        "watchDepsTargetName": "watch-deps"
+      }
+    },
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview",
         "buildDepsTargetName": "build-deps",
         "watchDepsTargetName": "watch-deps"
       }
