--- a/apps/pdp/package.json
+++ b/apps/pdp/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "@catalogue/browse",
+  "name": "@catalogue/pdp",
   "private": true,
   "type": "module",
-  "scripts": {
-    "build": "remix vite:build",
-    "start": "remix serve"
-  },
+  "scripts": {},
   "sideEffects": false,
   "dependencies": {
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
     "isbot": "^4.4.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0"
   }
 }
