--- a/package.json
+++ b/package.json
@@ -10,28 +10,36 @@
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
+    "axios": "^1.6.0",
+    "express": "^4.21.2",
     "isbot": "^4.4.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router": "^7.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^7.2.0",
+    "tsup": "^8.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "21.2.3",
     "@nx/eslint": "21.2.3",
     "@nx/eslint-plugin": "21.2.3",
+    "@nx/express": "21.2.3",
     "@nx/jest": "21.2.3",
     "@nx/js": "21.2.3",
+    "@nx/node": "21.2.3",
     "@nx/playwright": "21.2.3",
     "@nx/react": "21.2.3",
     "@nx/remix": "21.2.3",
     "@nx/vite": "21.2.3",
     "@nx/web": "21.2.3",
+    "@nx/webpack": "21.2.3",
     "@nx/workspace": "21.2.3",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@react-router/dev": "^7.2.0",
     "@remix-run/dev": "^2.15.0",
     "@remix-run/testing": "^2.15.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
@@ -41,10 +49,11 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
     "autoprefixer": "10.4.13",
@@ -58,11 +67,13 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.2.3",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -70,6 +81,7 @@
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "webpack-cli": "^5.1.4"
   }
 }
