fix: fixed build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       # When you enable task distribution, run the e2e-ci task instead of e2e
       - run: pnpm exec nx run-many -t lint test
 
-      - run: pnpm exec nx run -t build
+      - run: pnpm exec nx run-many -t build
         # If you want to run the e2e tests, uncomment the following line
         # - run: pnpm exec nx run-many -t e2e --parallel --maxParallel=3
       # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ci/features/self-healing-ci
