--- a/apps/bff/project.json
+++ b/apps/bff/project.json
@@ -1,27 +1,9 @@
 {
   "targets": {
-    "serve": {
-      "continuous": true,
-      "executor": "@nx/js:node",
-      "defaultConfiguration": "development",
-      "dependsOn": ["build"],
-      "options": {
-        "buildTarget": "@catalogue/bff:build",
-        "runBuildTargetDependencies": false
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "@catalogue/bff:build:development"
-        },
-        "production": {
-          "buildTarget": "@catalogue/bff:build:production"
-        }
-      }
-    },
     "build": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "tsup src/main.ts"
+        "command": "tsup apps/bff/src/main.ts"
       }
     },
     "test": {
