--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@nx/node": "21.2.3",
+    "@types/http-proxy-middleware": "^1.0.0",
     "tsup": "^8.5.0"
   }
 }
