feat: basic model for api

--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "tsup src/main.ts",
-    "dev": "tsx src/main.ts"
+    "dev": "tsx watch src/main.ts"
   },
   "dependencies": {
     "@remix-run/express": "^2.16.8",
