chore: added basic product model, renamed backend and resolved issues with proxy redirect

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
       "path": "./apps/browse"
     },
     {
-      "path": "./apps/bff"
+      "path": "./apps/pdp"
     },
     {
-      "path": "./apps/pdp"
+      "path": "./apps/backend"
     }
   ]
 }
