--- a/nx.json
+++ b/nx.json
@@ -73,7 +73,7 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/bff-e2e/**/*"]
+      "exclude": ["apps/backend-e2e/**/*"]
     },
     {
       "plugin": "@nx/remix/plugin",
