--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/main.ts"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@remix-run/express": "^2.16.8",
     "@remix-run/node": "^2.16.8",
     "cors": "^2.8.5",
