chore: slightly re-arranged routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
   "files": [],
   "references": [
     {
-      "path": "./apps/browse"
-    },
-    {
       "path": "./apps/pdp"
     },
     {
       "path": "./apps/backend"
+    },
+    {
+      "path": "./apps/category"
     }
   ]
 }
